Regression: Geometry Nodes: Curve to Points node not propagating attributes from spline domain #104256

Closed
opened 2023-01-31 13:10:42 +01:00 by Simon Thommes · 7 comments
Member

System Information
Operating system: Linux-5.17.15-76051715-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-31 10:18, hash: a71ae981c7
Worked: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-01 22:10, hash: 0a85288462

Caused by 7536abbe16
Functionality of copy_spline_domain_attributes is forgot

Short description of error
Attributes on the spline domain are not propagated in the Curve to Points node
bug_curve_to_point_attribute_propagation-2023-01-31_13.08.39.mp4

Exact steps for others to reproduce the error
See file:
bug_curve_to_point_attribute_propagation.blend

**System Information** Operating system: Linux-5.17.15-76051715-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-31 10:18, hash: `a71ae981c7` Worked: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-01 22:10, hash: `0a85288462` Caused by 7536abbe16 Functionality of `copy_spline_domain_attributes` is forgot **Short description of error** Attributes on the spline domain are not propagated in the `Curve to Points` node [bug_curve_to_point_attribute_propagation-2023-01-31_13.08.39.mp4](https://archive.blender.org/developer/F14219994/bug_curve_to_point_attribute_propagation-2023-01-31_13.08.39.mp4) **Exact steps for others to reproduce the error** See file: [bug_curve_to_point_attribute_propagation.blend](https://archive.blender.org/developer/F14219998/bug_curve_to_point_attribute_propagation.blend)
Author
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes
Iliya Katushenock changed title from Geometry Nodes: Curve to Points node not propagating attributes from spline domain to Regression: Geometry Nodes: Curve to Points node not propagating attributes from spline domain 2023-01-31 13:25:05 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @HooglyBoogly, @PratikPB2123

Added subscribers: @HooglyBoogly, @PratikPB2123
Member
> Caused by 7536abbe16 @HooglyBoogly ^
Hans Goudey self-assigned this 2023-02-01 16:44:06 +01:00
Hans Goudey removed their assignment 2023-02-03 19:31:57 +01:00
Iliya Katushenock was assigned by Hans Goudey 2023-02-03 19:31:57 +01:00
Iliya Katushenock removed their assignment 2023-02-06 21:04:07 +01:00
Hans Goudey was assigned by Iliya Katushenock 2023-02-06 21:04:07 +01:00

Added subscriber: @mod_moder

Added subscriber: @mod_moder

This issue was referenced by 3a1583972a

This issue was referenced by 3a1583972a1ccf24b543cad8f9fa7df4e6509938
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104256
No description provided.