Fix T104256: Curve to points node skips curve domain attributes

7536abbe16bd8672ca38e2b8 forgot to port the curve domain attributes.